<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="hello_android">Hello Android!!!</string>
    <string name="hello_message">Hello %s!</string>
    <string name="button_2">Button 2</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="say_hello">Say Hello</string>
    <string name="button_3">Button 3</string>

    <string-array name="sizes_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra large</item>
    </string-array>
</resources>