<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_android"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_prompt_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/name_edit_text"
        android:text="@string/enter_your_name" />

    <EditText
        android:inputType="textPersonName"
        android:id="@+id/name_edit_text"
        android:autofillHints="none"
        app:layout_constraintTop_toTopOf="@id/name_prompt_textview"
        app:layout_constraintLeft_toRightOf="@id/name_prompt_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hello_button"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/say_hello"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_2"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_3"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>